[gd_scene load_steps=19 format=3 uid="uid://3sutalhh58v5"]

[ext_resource type="Texture2D" uid="uid://dci6m6sjtyskw" path="res://Sprites/Inimigos/Isis Orb/Isis Orb.png" id="1_4rb2o"]
[ext_resource type="Script" path="res://Scripts/Personagens/isis_orb.gd" id="1_vqml5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_43agm"]
atlas = ExtResource("1_4rb2o")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_epyna"]
atlas = ExtResource("1_4rb2o")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2ugh"]
atlas = ExtResource("1_4rb2o")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7odu"]
atlas = ExtResource("1_4rb2o")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1lw0"]
atlas = ExtResource("1_4rb2o")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4fvd"]
atlas = ExtResource("1_4rb2o")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nu4x4"]
atlas = ExtResource("1_4rb2o")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_36he3"]
atlas = ExtResource("1_4rb2o")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kk1rv"]
atlas = ExtResource("1_4rb2o")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uh8m6"]
atlas = ExtResource("1_4rb2o")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnig1"]
atlas = ExtResource("1_4rb2o")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p53m5"]
atlas = ExtResource("1_4rb2o")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_naqht"]
atlas = ExtResource("1_4rb2o")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ms4b4"]
atlas = ExtResource("1_4rb2o")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yfjx"]
atlas = ExtResource("1_4rb2o")
region = Rect2(448, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qmd0k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_43agm")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_epyna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2ugh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7odu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1lw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4fvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nu4x4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36he3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kk1rv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uh8m6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnig1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p53m5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_naqht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms4b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yfjx")
}],
"loop": false,
"name": &"Recharge",
"speed": 10.0
}]

[node name="Isis_Orb" type="Node2D"]
script = ExtResource("1_vqml5")

[node name="Animacoes" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qmd0k")
animation = &"Recharge"

[node name="Orb_Spawnpoint" type="Marker2D" parent="."]
position = Vector2(0, -7)

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Player_Detector_Left" type="RayCast2D" parent="."]
target_position = Vector2(-145, 0)
collision_mask = 2

[node name="Player_Detector_Right" type="RayCast2D" parent="."]
target_position = Vector2(145, 0)
collision_mask = 2

[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
